--- a/analiseficha.html
+++ b/analiseficha.html
@@ -579,7 +579,7 @@ async function carregarPratos(){
 
   if(error) return alert("Erro pratos");
   pratos = data;
-  renderLista();
+  // ❌ não renderiza aqui
 }
 
 
