--- a/fichatecnica.html
+++ b/fichatecnica.html
@@ -333,6 +333,7 @@ button:disabled{opacity:.6;cursor:not-allowed}
       <option>SUCO</option>
       <option>SUSHI</option>
       <option>ACOMPANHAMENTO</option>
+      <option>RECEITA</option>
     </select>
   </div>
 
