--- a/analiseficha.html
+++ b/analiseficha.html
@@ -628,17 +628,27 @@ async function carregarCMVCache(){
     .from("impostos")
     .select("buffet_id, modalidade, valor");
 
-  // soma ingredientes
+  // 🔎 DEBUG: veja se está vindo o buffet_id certo
+  console.log("🧾 ITENS CMV:", itens);
+
   (itens || []).forEach(i=>{
-    cacheCMV[i.buffet_id] ??= { cmvBase:0, impostos:[] };
-    cacheCMV[i.buffet_id].cmvBase += Number(i.custo_calculado || 0);
+    if (!i.buffet_id) return; // ignora linhas quebradas
+    const bid = String(i.buffet_id).trim();
+
+    cacheCMV[bid] ??= { cmvBase:0, impostos:[] };
+    cacheCMV[bid].cmvBase += Number(i.custo_calculado || 0);
   });
 
-  // agrupa impostos
   (impostos || []).forEach(i=>{
-    cacheCMV[i.buffet_id] ??= { cmvBase:0, impostos:[] };
-    cacheCMV[i.buffet_id].impostos.push(i);
+    if (!i.buffet_id) return;
+    const bid = String(i.buffet_id).trim();
+
+    cacheCMV[bid] ??= { cmvBase:0, impostos:[] };
+    cacheCMV[bid].impostos.push(i);
   });
+
+  // 🔎 DEBUG: confirme se o prato está no cache
+  console.log("📦 cacheCMV:", cacheCMV);
 }
 
 
