--- a/dashboard.html
+++ b/dashboard.html
@@ -257,6 +257,8 @@ iframe{flex:1;width:100%;border:0;background:#fff}
    <div class="icon" onclick="openPage('config.html',this)"><span class="glyph settings"></span></div>
     <div class="icon" onclick="openPage('igredientesexcell.html',this)"><span class="glyph settings"></span></div>
 <div class="icon" onclick="openPage('midias.html',this)"><span class="glyph media"></span></div>
+     <div class="icon" onclick="openPage('relatorios.html',this)"><span class="glyph settings"></span></div>
+
 
   </aside>
 
@@ -312,7 +314,9 @@ const titles = {
   "analiseficha.html": "CB SYSTEMS® - Análise de Fichas",
   "config.html": "CB SYSTEMS® - Análise financeira",
   "igredientesexcell.html": "CB SYSTEMS® - Análise de Ingredientes",
-  "midias.html": "CB SYSTEMS® - Mídias do Cardápio"
+  "midias.html": "CB SYSTEMS® - Mídias do Cardápio",
+   "relatorios.html": "CB SYSTEMS® - Relatórios"
+
 };
 
 document.getElementById("pageTitle").innerText = titles[page] || "CB SYSTEMS®";
