--- a/receitas.html
+++ b/receitas.html
@@ -2,8 +2,11 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Relatório Executivo • CMV</title>
+<title>Relatório Executivo • CMV (Iframe)</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="mobile-web-app-capable" content="yes">
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800;900&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
@@ -14,7 +17,7 @@
 :root{
   --primary:#2563eb;
   --primary-dark:#1e40af;
-  --bg:#f8fafc;
+  --bg:#f4f6fb;
   --card:#ffffff;
   --text:#0f172a;
   --muted:#64748b;
@@ -24,6 +27,10 @@
 }
 
 *{box-sizing:border-box}
+
+html,body{
+  height:100%;
+}
 
 body{
   margin:0;
@@ -35,20 +42,20 @@ body{
   color:var(--text);
 }
 
-/* HEADER */
+/* HEADER FIXO */
 .header{
   position:sticky;
   top:0;
   z-index:20;
   backdrop-filter:blur(8px);
-  background:rgba(248,250,252,.9);
+  background:rgba(244,246,251,.92);
   border-bottom:1px solid var(--border);
 }
 
 .header-inner{
-  max-width:1200px;
+  max-width:1400px;
   margin:auto;
-  padding:18px 22px 12px;
+  padding:14px 18px 10px;
   display:flex;
   flex-direction:column;
   gap:10px;
@@ -56,7 +63,7 @@ body{
 
 .header h1{
   margin:0;
-  font-size:28px;
+  font-size:26px;
   font-weight:900;
   letter-spacing:-.02em;
 }
@@ -65,7 +72,7 @@ body{
   margin:0;
   color:var(--muted);
   font-weight:600;
-  font-size:13px;
+  font-size:12px;
 }
 
 /* FILTROS */
@@ -77,12 +84,13 @@ body{
 
 .filters input,
 .filters select{
-  height:44px;
+  height:40px;
   border-radius:999px;
   border:1px solid var(--border);
-  padding:0 16px;
+  padding:0 14px;
   font-weight:800;
-  font-size:13px;
+  font-size:12px;
+  background:#fff;
 }
 
 .filters input:focus,
@@ -93,27 +101,27 @@ body{
 }
 
 .btn-export{
-  height:44px;
-  padding:0 22px;
+  height:40px;
+  padding:0 18px;
   border-radius:999px;
   border:none;
   cursor:pointer;
   font-weight:900;
-  font-size:13px;
+  font-size:12px;
   letter-spacing:.08em;
   color:#fff;
   background:linear-gradient(135deg,var(--primary),var(--primary-dark));
-  box-shadow:0 14px 30px rgba(37,99,235,.45);
+  box-shadow:0 10px 24px rgba(37,99,235,.45);
 }
 
 /* CONTAINER */
 .container{
-  max-width:1200px;
+  max-width:1400px;
   margin:auto;
-  padding:22px;
+  padding:18px;
 }
 
-/* TABELA PREVIEW */
+/* TABELA */
 .table-wrap{
   background:var(--card);
   border-radius:22px;
@@ -125,13 +133,13 @@ body{
 table{
   width:100%;
   border-collapse:collapse;
-  min-width:900px;
+  min-width:1000px;
 }
 
 th, td{
-  padding:14px 12px;
+  padding:12px 10px;
   border-bottom:1px solid var(--border);
-  font-size:13px;
+  font-size:12px;
   text-align:left;
 }
 
@@ -139,8 +147,8 @@ th{
   background:#f1f5f9;
   font-weight:900;
   position:sticky;
-  top:0;
-  z-index:1;
+  top:92px; /* fixa header da tabela abaixo do header principal */
+  z-index:2;
 }
 
 tbody tr:hover{
@@ -148,13 +156,14 @@ tbody tr:hover{
 }
 
 /* RESPONSIVO */
-@media(max-width:820px){
+@media(max-width:900px){
   .filters{
     grid-template-columns:1fr 1fr;
   }
   .btn-export{
     grid-column:1/-1;
   }
+  th{ top:110px }
 }
 </style>
 </head>
@@ -244,7 +253,7 @@ function carregarTipos(){
 }
 
 /* ===============================
-   PREVIEW (MESMA LÓGICA DO EXCEL)
+   PREVIEW (MESMA LÓGICA)
 ================================ */
 function renderPreview(){
   const nome = filtroNome.value?.toUpperCase() || "";
@@ -305,7 +314,7 @@ filtroTipo.onchange = renderPreview;
 filtroStatus.onchange = renderPreview;
 
 /* ===============================
-   EXPORTAÇÃO (SUA LÓGICA ORIGINAL)
+   EXPORTAÇÃO (MESMA LÓGICA)
 ================================ */
 async function exportarRelatorio(){
 
